--- a/CourseWork/Views/Collection/CreateCollection.cshtml
+++ b/CourseWork/Views/Collection/CreateCollection.cshtml
@@ -44,7 +44,7 @@
 		<div class="row m-0 mb-3">
 			<label class="col-12 col-md-4">Обложка коллекции</label>
 			<div class="col-12 col-md-8">
-				<input name="image" type="file" />
+				<input name="image" class="form-control" type="file" />
 			</div>
 		</div>
 
