--- a/CourseWork/Views/Item/CreateItem.cshtml
+++ b/CourseWork/Views/Item/CreateItem.cshtml
@@ -22,7 +22,7 @@
 
 		<div class="mb-3">
 			<p>Обложка айтема</p>
-			<input type="file" name="image" /><br /><br />
+			<input type="file" class="form-control" name="image" /><br /><br />
 		</div>
 
 		<div>
