--- a/CourseWork/Views/Item/GetItem.cshtml
+++ b/CourseWork/Views/Item/GetItem.cshtml
@@ -41,11 +41,11 @@
 	</div>
 	<div class="col-xs-12 col-sm-12 col-md-6 col-lg-7 col-md-offset-6">
 		<input type="hidden" id="srcId" value="@Model.Id" />
-		<p><h1 class="text-dark">@Model.Name</h1></p>
+		<p><h1>@Model.Name</h1></p>
 		<div class="mt-5">
-			<small class="text-secondary">Дата создания: @Model.Date</small>
-			<p><strong class="text-dark">Автор:</strong> <a class="my-cursor" id="showProfile">@Model.Author</a></p>
-			<p><strong class="text-dark">Описание:</strong> @Model.Content</p>
+			<small>Дата создания: @Model.Date</small>
+			<p><strong>Автор:</strong> <a class="my-cursor" id="showProfile">@Model.Author</a></p>
+			<p><strong>Описание:</strong> @Model.Content</p>
 		</div>
 	</div>
 
