--- a/CourseWork/Views/Admin/Index.cshtml
+++ b/CourseWork/Views/Admin/Index.cshtml
@@ -17,7 +17,10 @@
 			<table class="table table-sm">
 				<thead>
 					<tr>
-						<th scope="col">Выбрать все <input type="checkbox" onClick="toggle(this)" /></th>
+						<th scope="col">
+							<label class="form-check-label" for="selectAll">Выбрать все </label>
+							<input id="selectAll" class="form-check-input" type="checkbox" onClick="toggle(this)" />
+						</th>
 						<th scope="col">ID</th>
 						<th scope="col">Имя</th>
 						<th scope="col">Дата регистрации</th>
@@ -29,7 +32,7 @@
 					@foreach (User user in Model)
 					{
 						<tr>
-							<td><input type="checkbox" name="selectedUsers" value="@user.Id" /></td>
+							<td><input type="checkbox" class="form-check-input" name="selectedUsers" value="@user.Id" /></td>
 							<td><p>@user.Id</p></td>
 							<td><p>@user.Name</p></td>
 							<td><p>@user.RegistrationDate.ToString()</p></td>
@@ -62,3 +65,6 @@
 	</form>
 </div>
 
+@section Scripts {
+	<script src="~/js/checkbox.js"></script>
+}
