--- a/CourseWork/Views/Collection/EditCollection.cshtml
+++ b/CourseWork/Views/Collection/EditCollection.cshtml
@@ -49,7 +49,7 @@
 				<div class="row m-0 mb-2">
 					<label class="col-12 col-md-4">Обложка коллекции</label>
 					<div class="col-12 col-md-8">
-						<input name="image" type="file" />
+						<input name="image" class="form-control" type="file" />
 					</div>
 				</div>
 			</fieldset>
@@ -124,8 +124,8 @@
 		</fieldset>
 
 		<div class="d-flex justify-content-center mt-3">
-			<button class="btn btn-outline-primary ml-2">Сохранить</button>
-			<a class="btn btn-outline-danger ml-3" href="/Collection/DeleteCollection/@Model.Id">Удалить</a>
+			<button class="btn btn-outline-primary me-2">Сохранить</button>
+			<a class="btn btn-outline-danger ms-3" href="/Collection/DeleteCollection/@Model.Id">Удалить</a>
 		</div>
 
 	</form>
