--- a/CourseWork/Views/Collection/GetCollection.cshtml
+++ b/CourseWork/Views/Collection/GetCollection.cshtml
@@ -38,16 +38,16 @@
 			</div>
 		}
 	</div>
-	<div class="col-xs-12 col-sm-12 col-md-6 col-lg-7  col-md-offset-6">
+	<div class="col-xs-12 col-sm-12 col-md-6 col-lg-7 col-md-offset-6">
 		<input type="hidden" id="srcId" value="@Model.Id" />
-		<p><h1 class="text-dark">@Model.Name</h1></p>
+		<p><h1>@Model.Name</h1></p>
 		<div class="mt-5">
-			<small class="text-secondary">Дата создания: @Model.Date</small>
-			<p><strong class="text-dark">Автор:</strong> <a class="my-cursor" id="showProfile">@Model.Author</a></p>
-			<p><strong class="text-dark">Тема:</strong> <a style="text-decoration: none;" href="/?theme=@Model.Theme">@Model.Theme</a></p>
-			<p><strong class="text-dark">Описание:</strong> @Model.Description</p>
+			<small>Дата создания: @Model.Date</small>
+			<p><strong>Автор:</strong> <a class="my-cursor" id="showProfile">@Model.Author</a></p>
+			<p><strong>Тема:</strong> <a style="text-decoration: none;" href="/?theme=@Model.Theme">@Model.Theme</a></p>
+			<p><strong>Описание:</strong> @Model.Description</p>
 			<div>
-				<strong class="text-dark">Теги:</strong>
+				<strong>Теги:</strong>
 				@foreach (var item in Model.Tags)
 				{
 					<a href="/?hashtag=@item.Name">#@item.Name</a>
