--- a/CourseWork/Views/Collection/MyCollections.cshtml
+++ b/CourseWork/Views/Collection/MyCollections.cshtml
@@ -30,7 +30,7 @@
 }
 else
 {
-	<h3 class="text-center text-dark">Ничего не найдено</h3>
+	<h3 class="text-center">Ничего не найдено</h3>
 } 
 
 @section Scripts {
