--- a/CourseWork/Views/Item/EditItem.cshtml
+++ b/CourseWork/Views/Item/EditItem.cshtml
@@ -21,12 +21,12 @@
 
 		<div class="mb-3">
 			<p>Обложка айтема</p>
-			<input type="file" name="image" /><br /><br />
+			<input type="file" class="form-control" name="image" /><br /><br />
 		</div>
 
 		<div class="d-flex justify-content-center">
-			<button class="btn btn-outline-primary">Сохранить</button>
-			<a class="btn btn-outline-danger ml-3" href="/Item/DeleteItem/@Model.Id">Удалить</a>
+			<button class="btn btn-outline-primary me-2">Сохранить</button>
+			<a class="btn btn-outline-danger ms-2" href="/Item/DeleteItem/@Model.Id">Удалить</a>
 		</div>
 
 	</form>
