--- a/CourseWork/Views/Profile/Settings.cshtml
+++ b/CourseWork/Views/Profile/Settings.cshtml
@@ -25,7 +25,7 @@
 
 		<div class="mb-5">
 			<label asp-for="ImgRef">Загрузить свой аватар</label>
-			<input class="form-group" type="file" name="image" />
+			<input class="form-control" type="file" name="image" />
 		</div>
 
 		<div>
