--- a/CourseWork/Views/Shared/_LoginPartial.cshtml
+++ b/CourseWork/Views/Shared/_LoginPartial.cshtml
@@ -1,20 +1,19 @@
 ﻿@if (User.Identity.IsAuthenticated)
 {
-
-	<ul class="navbar-nav me-auto mb-2 mb-lg-0">
-		<li class="nav-item">
-			<a class="nav-link text-dark" asp-controller="Profile" asp-action="Index">@User.Identity.Name</a>
-		</li>
-		<li class="nav-item">
-			<a class="nav-link text-dark" asp-controller="Account" asp-action="Logout">Выйти</a>
-		</li>
-	</ul>
-
+	<div class="btn-group" style="width: 46.47px;">
+		<button type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown" data-bs-display="static" aria-expanded="false">
+			<i class="fa-solid fa-ellipsis-vertical"></i>
+		</button>
+		<ul class="dropdown-menu dropdown-menu-lg-end">
+			<li><a class="dropdown-item me-2" href="/Profile"><i class="fa-solid fa-user"></i> Профиль</a></li>
+			<li><a class="dropdown-item me-2" href="/Account/Logout"><i class="fa-sharp fa-solid fa-arrow-right-from-bracket"></i> Выход</a></li>
+		</ul>
+	</div>
 }
 else
 {
 	<ul class="navbar-nav me-auto mb-2 mb-lg-0">
-		<li class="nav-item"><a class="nav-link text-dark" asp-controller="Account" asp-action="Register">Регистрация</a></li>
-		<li class="nav-item"><a class="nav-link text-dark" asp-controller="Account" asp-action="Login">Войти</a></li>
+		<li class="nav-item"><a class="nav-link" asp-controller="Account" asp-action="Register">Регистрация</a></li>
+		<li class="nav-item"><a class="nav-link" asp-controller="Account" asp-action="Login">Войти</a></li>
 	</ul>
 }
