dark theme elemnts fix

--- a/CourseWork/Pages/Index.cshtml
+++ b/CourseWork/Pages/Index.cshtml
@@ -20,9 +20,9 @@
 			   role="button"
 			   aria-expanded="false"
 			   aria-controls="collapseExample">
-				Filters
+				Фильтры
 			</a>
-			<button class="btn btn-outline-primary m-2" type="submit">Search</button>
+			<button class="btn btn-outline-primary m-2" type="submit">Искать</button>
 		</div>
 
 		<div class="collapse" id="collapseExample">
