--- a/CourseWork/Views/Item/GetItem.cshtml
+++ b/CourseWork/Views/Item/GetItem.cshtml
@@ -22,7 +22,7 @@
 					string attr = User.Identity.IsAuthenticated ? "class=my-cursor id=like" : string.Empty; 
 				}
 				<div @attr >
-					<img class="like" src="~/images/heart.svg" />
+					<i class="like"></i>
 				</div>
 
 			</div>
