--- a/CourseWork/wwwroot/css/site.css
+++ b/CourseWork/wwwroot/css/site.css
@@ -8,7 +8,7 @@
 .dark-mode h2, .dark-mode h3, .dark-mode h4, .dark-mode h5,
 .dark-mode h6, .dark-mode label, .dark-mode [scope="col"],
 .dark-mode option, .dark-mode td, .dark-mode tr,
-.dark-mode strong {
+.dark-mode strong, .dark-mode .like {
     color: #adb5bd;
 }
 
@@ -32,13 +32,12 @@ textarea {
 }
 
 .like {
-    height: 45px;
-    width: 45px;
+    font-size: 37px;
+    color: red;
 }
 
 .like-disabled {
-    pointer-events: none;
-    cursor: default;
+    font-size: 37px;
 }
 
 .validation {
@@ -77,7 +76,6 @@ legend {
 }
 
 .object-fit .collection-content-item-cover {
-    border: 1px solid black;
     padding: 0;
     object-fit: cover;
     object-position: center;
@@ -86,7 +84,6 @@ legend {
 }
 
 .object-fit .item-cover {
-    border: 1px solid black;
     padding: 0;
     object-fit: cover;
     object-position: center;
