--- a/CourseWork/Views/Collection/CreateCollection.cshtml
+++ b/CourseWork/Views/Collection/CreateCollection.cshtml
@@ -18,9 +18,9 @@
 
 		<div class="row m-0 mb-3">
 			<label asp-for="Description" class="col-12 col-md-4">Описание коллекции</label>
-			<div class ="col-12 col-md-8">
-				<textarea class="form-control" 
-						  asp-for="Description" 
+			<div class="col-12 col-md-8">
+				<textarea class="form-control"
+						  asp-for="Description"
 						  style="min-height: 150px; max-height: 150px"
 						  placeholder="Описание коллекции">
 				</textarea>
@@ -44,12 +44,45 @@
 		<div class="row m-0 mb-3">
 			<label class="col-12 col-md-4">Обложка коллекции</label>
 			<div class="col-12 col-md-8">
-				<input name="image" class="form-control" type="file" />
+				<div class='container-form'>
+					<input name="image" id="image" type="text" class="d-none" />
+					<input id='selectedFile' class="d-none" type='file' accept=".png, .jpg, .jpeg, .svg">
+					<a id="upload-aphoto" class="btn-primary btn">Выбрать изображение</a>
+				</div>
+				<div class='container-image'>
+					<img id='confirm-img' src=''>
+				</div>
+
+				<div class="modal fade" id="imageModalContainer" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+					<div class="modal-dialog modal-md modal-dialog-centered">
+						<div class="modal-content modal-content1 modal-content1">
+							<div class="modal-header">
+								<h5 class="modal-title" id="imageModal">Обрезка картинки</h5>
+								<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+							</div>
+							<div class="modal-body modal-body1">
+								<div id='crop-image-container'>
+								</div>
+							</div>
+							<div class="modal-footer">
+								<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Отмена</button>
+								<button type="button" class="btn btn-primary save-modal">Сохранить</button>
+							</div>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
+
 
 		<div class="text-center mt-5">
 			<button class="btn btn-outline-primary">Добавить</button>
 		</div>
 	</form>
 </div>
+
+@section Scripts {
+	<link href="~/css/croppie.css" rel="stylesheet">
+	<script src="~/js/croppie.min.js"></script>
+	<script src="~/js/cropImage.js"></script>
+}
