--- a/CourseWork/Views/Profile/Settings.cshtml
+++ b/CourseWork/Views/Profile/Settings.cshtml
@@ -25,7 +25,35 @@
 
 		<div class="mb-5">
 			<label asp-for="ImgRef">Загрузить свой аватар</label>
-			<input class="form-control" type="file" name="image" />
+			<div class="mt-1">
+				<div class='container-form'>
+					<input name="image" id="image" type="text" class="d-none" />
+					<input id='selectedAvatarFile' class="d-none" type='file' accept=".png, .jpg, .jpeg, .svg">
+					<a id="upload-avatar-photo" class="btn-primary btn">Выбрать изображение</a>
+				</div>
+				<div class='container-image'>
+					<img id='confirm-img' src=''>
+				</div>
+
+				<div class="modal fade" id="avatarModalContainer" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+					<div class="modal-dialog modal-md modal-dialog-centered">
+						<div class="modal-content modal-content1 modal-content1">
+							<div class="modal-header">
+								<h5 class="modal-title" id="imageModal">Обрезка картинки</h5>
+								<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+							</div>
+							<div class="modal-body modal-body1">
+								<div id='crop-image-container'>
+								</div>
+							</div>
+							<div class="modal-footer">
+								<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Отмена</button>
+								<button type="button" class="btn btn-primary save-modal">Сохранить</button>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>			
 		</div>
 
 		<div>
@@ -40,4 +68,7 @@
 			elements_selector: ".lazy"
 		});
 	</script>
+	<link href="~/css/croppie.css" rel="stylesheet">
+	<script src="~/js/croppie.min.js"></script>
+	<script src="~/js/cropImage.js"></script>
 }
