--- a/CourseWork/Views/Profile/Index.cshtml
+++ b/CourseWork/Views/Profile/Index.cshtml
@@ -21,9 +21,9 @@
 	</div>
 	<div class="col-md-6  text-center">
 		<div class="d-flex justify-content-center m-3">
-			<div class="object-fit">
+			<div>
 				<img class="avatar lazy"
-					 src="/images/thumbnail.png"
+					 src="~/images/thumbnail.png"
 					 data-src="@Model.ImgRef"
 					 onError="this.src='/images/person.svg'"
 					 alt="avatar_logo">
