--- a/CourseWork/Views/Profile/Settings.cshtml
+++ b/CourseWork/Views/Profile/Settings.cshtml
@@ -8,9 +8,9 @@
 <div class="container text-center custom-group-form">
 
 	<div class="d-flex justify-content-center m-4">
-		<div class="object-fit">
+		<div>
 			<img class="avatar lazy"
-				 src="/images//thumbnail.png"
+				 src="~/images/thumbnail.png"
 				 data-src="@Model.ImgRef"
 				 onError="this.src='/images/person.svg'"
 				 alt="avatar_logo">
