--- a/CourseWork/Views/Collection/EditCollection.cshtml
+++ b/CourseWork/Views/Collection/EditCollection.cshtml
@@ -83,20 +83,30 @@
 			<fieldset class="mb-3">
 				<legend>Теги</legend>
 
-				<div class="container text-center" style="width: 300px;">
-					<div class="row m-0 mb-2">
-						<input class="form-control col mr=2" type="text" id="tagInput" list="help" placeholder="введите тег" />
-						<div class="btn btn-primary col-4 ml-2 my-cursor" id="addTag">add tag</div>
+				<div class="container">
+					<div class="d-flex justify-content-center pt-3">
+						<div class="d-flex m-0 mb-2">
+							<input class="form-control me-2" type="text" id="tagInput" list="help" placeholder="введите тег" />
+							<div class="btn btn-primary ms-2 my-cursor" id="addTag">add</div>
+						</div>
 					</div>
-					<div id="tagList">
-						@foreach (var item in Model.Tags)
-						{
-							<div class='d-flex justify-content-center m-2'>
-								<input type='text' name='tags' class='m-1 readonly-input' value='@item.Name' readonly />
-								<div class='btn btn-danger m-1 my-cursor' id='remove'>remove</div>
+					<div class="d-flex flex-column flex-sm-row">
+						<div>
+							<div id="tagList" class="d-flex justify-content-start flex-wrap">
+								@foreach (var item in Model.Tags)
+								{
+									<div class='d-flex justify-content-between m-2'>
+										<div class="d-flex justify-content-start">
+											<input type='text' name='tags' class='m-1 readonly-input' value='@item.Name' readonly />
+										</div>
+										<div class="d-flex justify-content-end">
+											<div class='btn btn-danger m-1 my-cursor' id='remove'>remove</div>
+										</div>
+									</div>
+								}
 							</div>
-						}
-					</div>
+						</div>
+					</div>		
 
 					<datalist id="help">
 						@foreach (var item in Model.AllTags)
@@ -178,16 +188,12 @@
 
 				$("#tagInput").val("");
 			} else {
-				Swal.fire({
-					icon: "error",
-					title: "Oops...",
-					text: "Тег не должен содержать символ '#'",
-				});
+				alert("Тег не должен содержать символ '#'");
 			}
 		});
 
-		$(document).on("click", "#remove", () => {
-			$(this).parent().remove();
+		$(document).on("click", "#remove", function() {
+			$(this).parent().parent().remove();
 		});
 	</script>
 }
