--- a/CourseWork/Views/Item/GetItem.cshtml
+++ b/CourseWork/Views/Item/GetItem.cshtml
@@ -6,28 +6,28 @@
 
 <div class="row">
 	<div class="col-xs-12 col-sm-12 col-md-6 col-lg-5 text-center">
-
-		<div class="object-fit">
-			<img class="cover lazy"
-				 src="data:image/gif;base64,R0lGODlhBwAFAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAUAAAIFjI+puwUAOw=="
+		<div>
+			<img class="lazy"
+				 src="~/images/thumbnail.png"
 				 data-src="@Model.ImgRef"
 				 onError="this.src='/images/imgnotfound.jpg'"
-				 alt="" />
+				 alt=""
+				 style="width: 100%" />
 		</div>
 
-		<div class="row m-3">
-			<div class="col-6 d-flex justify-content-end">
+		<div class="d-flex justify-content-center m-3">
+			<div class="d-flex justify-content-end me-1">
 
-				@{ 
-					string attr = User.Identity.IsAuthenticated ? "class=my-cursor id=like" : string.Empty; 
+				@{
+					string attr = User.Identity.IsAuthenticated ? "class=my-cursor id=like-clickable" : string.Empty;
 				}
 				<div @attr >
-					<i class="like"></i>
+					<i id="like" class="like"></i>
 				</div>
 
 			</div>
-			<div class="col-6 d-flex justify-content-start">
-				<h1 id="likesCount"></h1>
+			<div class="d-flex justify-content-start ms-1">
+				<h1 class ="mb-0" style="font-size: 43px;" id="likesCount"></h1>
 			</div>
 		</div>
 
@@ -35,11 +35,11 @@
 		@if (Model.Author == User.Identity.Name || User.IsInRole("admin"))
 		{
 			<div class="text-center">
-				<a class="btn btn-outline-info" href="/Item/EditItem/@Model.Id">Редактиовать</a>
+				<a class="btn btn-outline-info" href="/Item/EditItem/@Model.Id">Редактировать</a>
 			</div>
 		}
 	</div>
-	<div class="col-xs-12 col-sm-12 col-md-6 col-lg-7 col-md-offset-6">
+	<div class="col-xs-12 col-sm-12 col-md-6 col-lg-7">
 		<input type="hidden" id="srcId" value="@Model.Id" />
 		<p><h1>@Model.Name</h1></p>
 		<div class="mt-5">
