--- a/CourseWork/Views/Item/MyItems.cshtml
+++ b/CourseWork/Views/Item/MyItems.cshtml
@@ -21,32 +21,11 @@
 	<div class="row">
 		@foreach (var item in Model)
 		{
-			<div class="col-10 col-sm-6 col-md-6 col-lg-4 p-2">
-				<a href="/Item/GetItem/@item.Id">
-					<div class="gallery-item">
-						<div class="object-fit">
-							<img src="data:image/gif;base64,R0lGODlhBwAFAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAUAAAIFjI+puwUAOw=="
-						 data-src="@item.ImgRef"
-						 alt="image"
-						 class="item-cover lazy">
-						</div>
-						<div class="gallery-item-info">
-							<ul>
-								<li class="gallery-item-likes">
-									<span class="visualy-hidden">Likes: <i class="fa-solid fa-heart"></i> @item.LikesCount</span>
-								</li>
-								<li class="gallery-items-comments">
-									<span class="visualy-hidden">Comments: <i class="fa-solid fa-comment"></i> @item.CommentsCount</span>
-								</li>
-							</ul>
-						</div>
-					</div>
-				</a>
-			</div>
+			<partial name="ItemPartial" for="@item" />
 		}
 	</div>
 	<div class="ml-2">
-		<partial name="_paginationPartial" for="@pagination" />
+		<partial name="PaginationPartial" for="@pagination" />
 	</div>
 }
 else
