--- a/CourseWork/Views/Shared/CollectionPartial.cshtml
+++ b/CourseWork/Views/Shared/CollectionPartial.cshtml
@@ -1,10 +1,10 @@
 ﻿@model CourseWork.Domain.Entities.Collection
 
-<div class="col-10 col-sm-10 col-md-6 col-lg-4">
+<div class="col-12 col-sm-12 col-md-6 col-lg-4">
     <div class="card m-2">
-        <div class="object-fit">
-            <img class="lazy collection-cover"
-                 src="data:image/gif;base64,R0lGODlhBwAFAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAUAAAIFjI+puwUAOw=="
+        <div>
+            <img class="lazy card-img-top"
+                 src="~/images/thumbnail.png"
                  data-src="@Model.ImgRef"
                  onError="this.src='/images/imgnotfound.jpg'"
                  alt="Image">
