--- a/CourseWork/Views/Collection/GetCollection.cshtml
+++ b/CourseWork/Views/Collection/GetCollection.cshtml
@@ -106,7 +106,7 @@
 @section Scripts {
 	<script src="~/js/showProfile.js"></script>
 	<script src="~/js/likes.js"></script>
-	<script src="~/js/comments.js"></script>
+	<partial name="CommentScriptsPartial" />
 	<script>
 		var lazyLoadInstance = new LazyLoad({
 			elements_selector: ".lazy"
