--- a/CourseWork/Views/Item/GetItem.cshtml
+++ b/CourseWork/Views/Item/GetItem.cshtml
@@ -89,6 +89,7 @@
 	<script src="~/js//showProfile.js"></script>
 	<script src="~/js/comments.js"></script>
 	<script src="~/js/likes.js"></script>
+	<partial name="CommentScriptsPartial" />
 	<script>
 		var lazyLoadInstance = new LazyLoad({
 			elements_selector: ".lazy"
