--- a/CourseWork/Views/Shared/CommentsPartial.cshtml
+++ b/CourseWork/Views/Shared/CommentsPartial.cshtml
@@ -1,27 +1,3 @@
-﻿<hr />
-@if (User.Identity.IsAuthenticated)
-{
-	<div class="d-flex">
-		<div class="d-flex justify-content-start me-1" style="width: 100%">
-			<input class="form-control" type="text" placeholder="Оставить коментарий" id="comment">
-		</div>
-		<div class="d-flex justify-content-end ms-1">
-			<input class="btn btn-outline-primary" type="submit" value="Отправить" id="sendComment">
-		</div>
-	</div>
-}
-else
-{
-	<div>
-		<p>Чтобы оставлять комментарии <a href="/Account/Login">авторизируйтесь</a></p>
-	</div>
-}
-<hr />
-<div>
-	<div class="row">
-		<div class="list-group col-12 ps-2 pe-2" id="comments"></div>
-	</div>
-	<div class="text-center">
-		<button class="btn btn-secondary" id="showMore" style="display: none;">Показать еще</button>
-	</div>
+﻿<div class="container">
+	<div id="comments-container"></div>
 </div>
