--- a/CourseWork/Views/Collection/CreateCollection.cshtml
+++ b/CourseWork/Views/Collection/CreateCollection.cshtml
@@ -19,11 +19,7 @@
 		<div class="row m-0 mb-3">
 			<label asp-for="Description" class="col-12 col-md-4">Описание коллекции</label>
 			<div class="col-12 col-md-8">
-				<textarea class="form-control"
-						  asp-for="Description"
-						  style="min-height: 150px; max-height: 150px"
-						  placeholder="Описание коллекции">
-				</textarea>
+				<textarea asp-for="Description"></textarea>
 			</div>
 		</div>
 
@@ -85,4 +81,13 @@
 	<link href="~/css/croppie.css" rel="stylesheet">
 	<script src="~/js/croppie.min.js"></script>
 	<script src="~/js/cropImage.js"></script>
+	<script src="~/lib/simplemde/dist/js/simplemde.min.js"></script>
+	<link href="~/lib/simplemde/dist/css/simplemde.min.css" rel="stylesheet">
+
+	<script>
+		var simplemde = new SimpleMDE({
+			element: $("input[name=Description")[0],
+			toolbar: ["bold", "italic", "heading", "|", "quote", "unordered-list", "ordered-list", "|", "link", "image", "|", "preview", "guide"]
+		});
+	</script>
 }
