--- a/CourseWork/Views/Collection/EditCollection.cshtml
+++ b/CourseWork/Views/Collection/EditCollection.cshtml
@@ -24,7 +24,7 @@
 				<div class="row m-0 mb-2">
 					<label asp-for="Description" class="col-12 col-md-4">Описание коллекции</label>
 					<div class="col-12 col-md-8">
-						<textarea class="form-control" asp-for="Description" style="min-height: 150px; max-height: 150px"></textarea>
+						<textarea asp-for="Description"></textarea>
 					</div>
 				</div>
 
@@ -171,6 +171,16 @@
 	<link href="~/css/croppie.css" rel="stylesheet">
 	<script src="~/js/croppie.min.js"></script>
 	<script src="~/js/cropImage.js"></script>
+	<script src="~/lib/simplemde/dist/js/simplemde.min.js"></script>
+	<link href="~/lib/simplemde/dist/css/simplemde.min.css" rel="stylesheet">
+
+	<script>
+		var simplemde = new SimpleMDE({
+			element: $("input[name=Description")[0],
+			toolbar: ["bold", "italic", "heading", "|", "quote", "unordered-list", "ordered-list", "|", "link", "image", "|", "preview", "guide"]
+		});
+	</script>
+
 	<script>
 		$("#addTag").on("click", () => {
 			let tag = $("#tagInput").val();
