fix solution references in '.chtml' files

--- a/CourseWork/Views/Account/ChangePassword.cshtml
+++ b/CourseWork/Views/Account/ChangePassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model CourseWork.Domain.ViewModels.Account.ChangePasswordViewModel
+﻿@model CourseWork.ViewModels.Account.ChangePasswordViewModel
 
 @{
     ViewData["Title"] = "ChangePassword";
