--- a/CourseWork/Views/Account/Login.cshtml
+++ b/CourseWork/Views/Account/Login.cshtml
@@ -1,4 +1,4 @@
-﻿@model CourseWork.Domain.ViewModels.Account.LoginViewModel
+﻿@model CourseWork.ViewModels.Account.LoginViewModel
 
 @{
 	ViewData["Title"] = "Login";
