--- a/CourseWork/Views/Account/Register.cshtml
+++ b/CourseWork/Views/Account/Register.cshtml
@@ -1,4 +1,4 @@
-﻿@model CourseWork.Domain.ViewModels.Account.RegisterViewModel
+﻿@model CourseWork.ViewModels.Account.RegisterViewModel
 @{
 	ViewData["Title"] = "Register";
 }
