--- a/CourseWork/Views/Collection/CreateCollection.cshtml
+++ b/CourseWork/Views/Collection/CreateCollection.cshtml
@@ -1,4 +1,4 @@
-﻿@model CourseWork.Domain.ViewModels.Collection.CreateCollectionViewModel
+﻿@model CourseWork.ViewModels.Collection.CreateCollectionViewModel
 
 @{
 	ViewData["Title"] = "Создание коллекции";
