--- a/CourseWork/Views/Collection/GetCollection.cshtml
+++ b/CourseWork/Views/Collection/GetCollection.cshtml
@@ -1,4 +1,4 @@
-﻿@model CourseWork.Domain.ViewModels.Collection.CollectionViewModel;
+﻿@model CourseWork.ViewModels.Collection.CollectionViewModel;
 
 @{
 	ViewData["Title"] = "Collection";
