--- a/CourseWork/Views/Collection/MyCollections.cshtml
+++ b/CourseWork/Views/Collection/MyCollections.cshtml
@@ -1,5 +1,5 @@
-﻿@using CourseWork.Domain.ViewModels.Shared;
-@model IEnumerable<CourseWork.Domain.Entities.Collection>
+﻿@using CourseWork.ViewModels.Shared;
+@model IEnumerable<CourseWork.ViewModels.Collection.CollectionViewModel>
 
 @{
     ViewData["Title"] = "MyCollections";
