--- a/CourseWork/Views/Item/CreateItem.cshtml
+++ b/CourseWork/Views/Item/CreateItem.cshtml
@@ -1,4 +1,4 @@
-﻿@model CourseWork.Domain.ViewModels.Item.CreateItemViewModel
+﻿@model CourseWork.ViewModels.Item.CreateItemViewModel
 
 @{
 	ViewData["Title"] = "CreateItem";
