--- a/CourseWork/Views/Item/MyItems.cshtml
+++ b/CourseWork/Views/Item/MyItems.cshtml
@@ -1,5 +1,5 @@
-﻿@using CourseWork.Domain.ViewModels.Shared;
-@model IEnumerable<CourseWork.Domain.ViewModels.Item.ItemViewModel>
+﻿@using CourseWork.ViewModels.Shared;
+@model IEnumerable<CourseWork.ViewModels.Item.ItemViewModel>
 
 @{
     ViewData["Title"] = "MyItems";
