--- a/CourseWork/Views/Profile/Settings.cshtml
+++ b/CourseWork/Views/Profile/Settings.cshtml
@@ -1,4 +1,4 @@
-﻿@model CourseWork.Domain.ViewModels.Profile.ProfileViewModel
+﻿@model CourseWork.ViewModels.Profile.ProfileViewModel
 
 @{
     ViewData["Title"] = "Settings";
