--- a/CourseWork/Views/Shared/PaginationPartial.cshtml
+++ b/CourseWork/Views/Shared/PaginationPartial.cshtml
@@ -1,4 +1,4 @@
-﻿@model CourseWork.Domain.ViewModels.Shared.Pagination
+﻿@model CourseWork.ViewModels.Shared.Pagination
 
 @{
 	var firstPageData = Context.Request.Query.ToDictionary(x => x.Key, x => x.Value.ToString());
