--- a/CourseWork/Views/Collection/EditCollection.cshtml
+++ b/CourseWork/Views/Collection/EditCollection.cshtml
@@ -1,5 +1,4 @@
-﻿@using CourseWork.Domain.Entities
-@model CourseWork.Domain.ViewModels.Collection.CollectionViewModel
+﻿@model CourseWork.ViewModels.Collection.EditCollectionViewModel
 
 @{
 	ViewData["Title"] = "Редактирование коллекции";
@@ -15,9 +14,9 @@
 				<legend>Основная информация</legend>
 
 				<div class="row m-0 mb-2">
-					<label asp-for="Name" class="col-12 col-md-4">Название коллекции</label>
+					<label asp-for="Title" class="col-12 col-md-4">Название коллекции</label>
 					<div class="col-12 col-md-8">
-						<input class="form-control" asp-for="Name" placeholder="Название коллекции" />
+						<input class="form-control" asp-for="Title" placeholder="Название коллекции" />
 					</div>
 				</div>
 
@@ -97,7 +96,7 @@
 								{
 									<div class='d-flex justify-content-between m-2'>
 										<div class="d-flex justify-content-start">
-											<input type='text' name='tags' class='m-1 readonly-input' value='@item.Name' readonly />
+											<input type='text' name='tags' class='m-1 readonly-input' value='@item' readonly />
 										</div>
 										<div class="d-flex justify-content-end">
 											<div class='btn btn-danger m-1 my-cursor' id='remove'>remove</div>
@@ -109,16 +108,16 @@
 					</div>		
 
 					<datalist id="help">
-						@foreach (var item in Model.AllTags)
+						@foreach (var item in Model.Tags)
 						{
-							<option value="@item.Name"></option>
+							<option value="@item"></option>
 						}
 					</datalist>
 
 				</div>
 			</fieldset>
 		</div>
-
+@*
 		<fieldset style="padding: 20px;" class="mt-3 mb-3">
 			<legend>Айтемы</legend>
 
@@ -158,7 +157,7 @@
 				<p>Нет доступных айтемов <a class="link-info" href="/Item/CreateItem">Создать</a></p>
 			}
 		</fieldset>
-
+*@
 		<div class="d-flex justify-content-center mt-3">
 			<button class="btn btn-outline-primary me-2">Сохранить</button>
 			<a class="btn btn-outline-danger ms-3" href="/Collection/DeleteCollection/@Model.Id">Удалить</a>
