--- a/CourseWork/Views/Shared/ItemPartial.cshtml
+++ b/CourseWork/Views/Shared/ItemPartial.cshtml
@@ -1,4 +1,4 @@
-﻿@model CourseWork.Domain.ViewModels.Item.ItemViewModel
+﻿@model CourseWork.ViewModels.Item.ItemViewModel
 
 <div class="col-12 col-sm-6 col-md-6 col-lg-4 p-3">
 	<a href="/Item/GetItem/@Model.Id">
