small fixes in cshtml files

--- a/CourseWork/Views/Item/GetItem.cshtml
+++ b/CourseWork/Views/Item/GetItem.cshtml
@@ -9,7 +9,7 @@
 		<div>
 			<img class="lazy"
 				 src="~/images/thumbnail.png"
-				 data-src="@Model.ImgRef"
+				 data-src="@Model.ImgUrl"
 				 onError="this.src='/images/imgnotfound.jpg'"
 				 alt=""
 				 style="width: 100%" />
@@ -41,11 +41,11 @@
 	</div>
 	<div class="col-xs-12 col-sm-12 col-md-6 col-lg-7">
 		<input type="hidden" id="srcId" value="@Model.Id" />
-		<p><h1>@Model.Name</h1></p>
+		<p><h1>@Model.Title</h1></p>
 		<div class="mt-5">
 			<small>Дата создания: @Model.Date</small>
 			<p><strong>Автор:</strong> <a class="my-cursor" id="showProfile">@Model.Author</a></p>
-			<p><strong>Описание:</strong> @Html.Raw(Markdig.Markdown.ToHtml(Model.Content))</p>
+			<p><strong>Описание:</strong> @Html.Raw(Markdig.Markdown.ToHtml(Model.Description))</p>
 		</div>
 	</div>
 
