--- a/CourseWork/Views/Shared/ItemPartial.cshtml
+++ b/CourseWork/Views/Shared/ItemPartial.cshtml
@@ -5,7 +5,7 @@
 		<div class="gallery-item">
 			<div>
 				<img src="~/images/thumbnail.png"
-	  data-src="@Model.ImgRef"
+	  data-src="@Model.ImgUrl"
 	  alt="image"
 	  class="lazy card-img-top">
 			</div>
