--- a/CourseWork/Views/Collection/GetCollection.cshtml
+++ b/CourseWork/Views/Collection/GetCollection.cshtml
@@ -9,7 +9,7 @@
 		<div>
 			<img class="lazy"
 				 src="~/images/thumbnail.png"
-				 data-src="@Model.ImgRef"
+				 data-src="@Model.ImgUrl"
 				 onError="this.src='/images/imgnotfound.jpg'"
 				 alt="" 
 				 style="width: 100%" />
@@ -41,7 +41,7 @@
 	</div>
 	<div class="col-12 col-sm-12 col-md-6 col-lg-7">
 		<input type="hidden" id="srcId" value="@Model.Id" />
-		<p><h1>@Model.Name</h1></p>
+		<p><h1>@Model.Title</h1></p>
 		<div class="mt-5">
 			<small>Дата создания: @Model.Date</small>
 			<p><strong>Автор:</strong> <a class="my-cursor" id="showProfile">@Model.Author</a></p>
@@ -53,7 +53,7 @@
 					<strong>Теги:</strong>
 					@foreach (var item in Model.Tags)
 					{
-						<a href="/?hashtag=@item.Name">#@item.Name</a>
+						<a href="/?hashtag=@item">#@item</a>
 					}
 				</div>
 			}
