--- a/CourseWork/Views/Item/CreateItem.cshtml
+++ b/CourseWork/Views/Item/CreateItem.cshtml
@@ -11,16 +11,16 @@
 		<div class="validation" asp-validation-summary="All"></div>
 
 		<div class="row m-0 mb-3">
-			<label asp-for="Name" class="col-12 col-md-4">Название айтема</label>
+			<label asp-for="Title" class="col-12 col-md-4">Название айтема</label>
 			<div class="col-12 col-md-8">
-				<input class="form-control" type="text" asp-for="Name" placeholder="Название айтема" />
+				<input class="form-control" type="text" asp-for="Title" placeholder="Название айтема" />
 			</div>
 		</div>
 
 		<div class="row m-0 mb-3">
-			<label asp-for="Content" class="col-12 col-md-4">Содержание айтема</label>
+			<label asp-for="Description" class="col-12 col-md-4">Содержание айтема</label>
 			<div class="col-12 col-md-8">
-				<textarea asp-for="Content"></textarea>
+				<textarea asp-for="Description"></textarea>
 			</div>
 		</div>
 
