--- a/CourseWork/Views/Collection/CreateCollection.cshtml
+++ b/CourseWork/Views/Collection/CreateCollection.cshtml
@@ -10,9 +10,9 @@
 		<div class="validation" asp-validation-summary="All"></div>
 
 		<div class="row m-0 mb-3">
-			<label asp-for="Name" class="col-12 col-md-4">Название коллекции</label>
+			<label asp-for="Title" class="col-12 col-md-4">Название коллекции</label>
 			<div class="col-12 col-md-8">
-				<input class="form-control" type="text" asp-for="Name" placeholder="Название коллекции" />
+				<input class="form-control" type="text" asp-for="Title" placeholder="Название коллекции" />
 			</div>
 		</div>
 
