--- a/CourseWork/Views/Item/EditItem.cshtml
+++ b/CourseWork/Views/Item/EditItem.cshtml
@@ -1,4 +1,4 @@
-﻿@model CourseWork.ViewModels.Item.ItemViewModel
+﻿@model CourseWork.ViewModels.Item.EditItemViewModel
 
 @{
 	ViewData["Title"] = "EditItem";
