fixed adding items to the collection

--- a/CourseWork/Views/Item/GetItem.cshtml
+++ b/CourseWork/Views/Item/GetItem.cshtml
@@ -52,7 +52,7 @@
 	<div class="container mt-4 mb-4">
 		@if (!string.IsNullOrWhiteSpace(Model.CollectionId))
 		{
-			<h4>Айтем находится в коллекции <a href="/Collection/GetCollection/@Model.CollectionId">@Model.CollectionName</a></h4>
+			<h4>Айтем находится в коллекции <a href="/Collection/GetCollection/@Model.CollectionId">@Model.CollectionTitle</a></h4>
 		}
 	</div>
 
