--- a/CourseWork/Views/Collection/EditCollection.cshtml
+++ b/CourseWork/Views/Collection/EditCollection.cshtml
@@ -1,4 +1,5 @@
-﻿@model CourseWork.ViewModels.Collection.EditCollectionViewModel
+﻿@using CourseWork.ViewModels.Item;
+@model CourseWork.ViewModels.Collection.EditCollectionViewModel
 
 @{
 	ViewData["Title"] = "Редактирование коллекции";
@@ -95,12 +96,8 @@
 								@foreach (var item in Model.Tags)
 								{
 									<div class='d-flex justify-content-between m-2'>
-										<div class="d-flex justify-content-start">
-											<input type='text' name='tags' class='m-1 readonly-input' value='@item' readonly />
-										</div>
-										<div class="d-flex justify-content-end">
-											<div class='btn btn-danger m-1 my-cursor' id='remove'>remove</div>
-										</div>
+                                        <input type='text' name='includedTags' class='m-1 readonly-input' value='@item' readonly />
+                                        <div class='btn btn-danger m-1 my-cursor' id='remove'>remove</div>
 									</div>
 								}
 							</div>
@@ -117,11 +114,14 @@
 				</div>
 			</fieldset>
 		</div>
-@*
+
 		<fieldset style="padding: 20px;" class="mt-3 mb-3">
 			<legend>Айтемы</legend>
 
-			@if (Model.FreeItems.Any())
+			@{
+				var items = ViewData["Items"] as List<ItemViewModel> ?? new List<ItemViewModel>();
+			}
+			@if (items.Any())
 			{
 				<div style="overflow: auto;">
 					<table class="table table-sm">
@@ -135,16 +135,16 @@
 							</tr>
 						</thead>
 						<tbody>
-							@foreach (var item in Model.FreeItems)
+							@foreach (var item in items)
 							{
 								<tr>
 									<td>
 										<input type="checkbox" name="selectedItems" value="@item.Id"
-									   @(Model.Items.FirstOrDefault(i => i.Id == item.Id) != null ? "checked=\"checked\"" : "") />
+									   @(items.FirstOrDefault(i => i.CollectionId == Model.Id) != null ? "checked=\"checked\"" : "") />
 									</td>
-									<td>@item.Name</td>
+									<td>@item.Title</td>
 									<td>@item.Author</td>
-									<td>@item.Content</td>
+									<td>@item.Description</td>
 									<td>@item.Date</td>
 								</tr>
 							}
@@ -157,7 +157,7 @@
 				<p>Нет доступных айтемов <a class="link-info" href="/Item/CreateItem">Создать</a></p>
 			}
 		</fieldset>
-*@
+
 		<div class="d-flex justify-content-center mt-3">
 			<button class="btn btn-outline-primary me-2">Сохранить</button>
 			<a class="btn btn-outline-danger ms-3" href="/Collection/DeleteCollection/@Model.Id">Удалить</a>
@@ -187,7 +187,7 @@
 			if (!tag.includes("#")) {
 
 				let div = $("<div class='d-flex justify-content-center m-2'></div>");
-				let input = $("<input type='text' name='tags' class='m-1 readonly-input' value='" + tag + "' readonly />")
+				let input = $("<input type='text' name='includedTags' class='m-1 readonly-input' value='" + tag + "' readonly />")
 				let removeBtn = $("<div class='btn btn-danger m-1 my-cursor' id='remove'>remove</div>");
 
 				div.append(input);
@@ -202,7 +202,9 @@
 		});
 
 		$(document).on("click", "#remove", function() {
-			$(this).parent().parent().remove();
+			$(this).parent().remove();
+
+			console.log($(this).parent());
 		});
 	</script>
 }
